# transcriptomatic

./: .gitignore  README.md
EVAL/: .gitignore  README.md  compare_files.py  how_to_improve_stt_using_google_cloud.md  pyproject.toml
EVAL/evaluat/: compare_single_model_scores.py  evaluation_results.csv  evaluation_results_averaged.csv  evaluation_results_with_mosebook.csv  evaluator.py  llm_eval.py  normalize_csv.py  plot_evaluation_results.py  process_evaluation_results.py
EVAL/evaluat/correct_transcriptions/: 629.txt  Jaktmöjligheter-i-naturreservat.txt  Mosebok-kap9.txt  developerspodcast213-massor-med-ai-nyheter.txt  säkerhetspodcasten.txt  veckans-ai.txt
EVAL/transcribe/results/KBLab-kb-whisper-base/629/: KBLab-kb-whisper-base_629_transcription_result.srt  KBLab-kb-whisper-base_629_transcription_result.txt
EVAL/transcribe/results/KBLab-kb-whisper-base/Jaktmöjligheter-i-naturreservat/: KBLab-kb-whisper-base_Jaktmöjligheter-i-naturreservat_transcription_result.srt  KBLab-kb-whisper-base_Jaktmöjligheter-i-naturreservat_transcription_result.txt
EVAL/transcribe/results/KBLab-kb-whisper-base/Mosebok-kap9/: KBLab-kb-whisper-base_Mosebok-kap9_transcription_result.srt  KBLab-kb-whisper-base_Mosebok-kap9_transcription_result.txt
EVAL/transcribe/results/KBLab-kb-whisper-base/developerspodcast213-massor-med-ai-nyheter/: KBLab-kb-whisper-base_developerspodcast213-massor-med-ai-nyheter_transcription_result.srt  KBLab-kb-whisper-base_developerspodcast213-massor-med-ai-nyheter_transcription_result.txt
EVAL/transcribe/results/KBLab-kb-whisper-base/säkerhetspodcasten/: KBLab-kb-whisper-base_säkerhetspodcasten_transcription_result.srt  KBLab-kb-whisper-base_säkerhetspodcasten_transcription_result.txt
EVAL/transcribe/results/KBLab-kb-whisper-base/veckans-ai/: KBLab-kb-whisper-base_veckans-ai_transcription_result.srt  KBLab-kb-whisper-base_veckans-ai_transcription_result.txt
EVAL/transcribe/results/KBLab-kb-whisper-large/629/: KBLab-kb-whisper-large_629_transcription_result.srt  KBLab-kb-whisper-large_629_transcription_result.txt
EVAL/transcribe/run/: local_models.json  run_azure_all.py  run_deepgram_all.py  run_elevenlabs_all.py  run_google_all.py  run_local_all.py
MVP/backend/: Dockerfile  api.py  audio_transcribe.py  constants.py  database.py  download_models.py  pyproject.toml  websocket_manager.py
MVP/backend/agents/: __init__.py  agent_runner.py  agent_utils.py  black_hat_agent.py  blue_hat_agent.py  green_hat_agent.py  miro_agent.py  model_chooser.py  purple_hat_agent.py  red_hat_agent.py  white_hat_agent.py  yellow_hat_agent.py
(+150 files in other folders)
